JUnit test, Notice CRUD

--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -19,3 +19,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mapper의 위치
 mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
+# config의 위치
+mybatis.config-location=classpath:database/config/MybatisConfig.xml
