--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/user01
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # mapper의 위치
-mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
+# mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
 # config의 위치
-mybatis.config-location=classpath:database/config/MybatisConfig.xml
+# mybatis.config-location=classpath:database/config/MybatisConfig.xml
+
+mybatis.type-aliases-package=com.winter.app
