--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -22,4 +22,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # config의 위치
 # mybatis.config-location=classpath:database/config/MybatisConfig.xml
 
+# 중복된 클래스명이 있는 경우 x
 mybatis.type-aliases-package=com.winter.app
