--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -24,3 +24,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # 중복된 클래스명이 있는 경우 x
 mybatis.type-aliases-package=com.winter.app
+
+# Snake case를 Camel case로 변환
+mybatis.configuration.map-underscore-to-camel-case=true
+
