--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -14,8 +14,11 @@ spring.mvc.view.suffix=.jsp
 # 유저네임
 spring.datasource.hikari.username=user01
 spring.datasource.hikari.password=user01
-spring.datasource.url=jdbc:mysql://localhost:3306/user01
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# spring.datasource.url=jdbc:mysql://localhost:3306/user01
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # mapper의 위치
 # mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
