--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -31,3 +31,11 @@ mybatis.type-aliases-package=com.winter.app
 # Snake case를 Camel case로 변환
 mybatis.configuration.map-underscore-to-camel-case=true
 
+######################################
+
+# 배포 후 변경 가능
+board.notice=Notice
+board.qna=QnA
+
+
+
