--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -33,6 +33,24 @@ mybatis.configuration.map-underscore-to-camel-case=true
 
 ######################################
 
+## FileUpload
+
+# MultiPart 객체의 사용 여부
+spring.servlet.multipart.enabled=true
+
+# 파일 하나당 최대 크기 설정
+spring.servlet.multipart.max-file-size=5MB
+
+# 총 파일의 최대 크기 설정
+spring.servlet.multipart.max-request-size=25MB
+
+### FilePath
+# 업로드할 폴더의 공통 경로
+app.upload=D:/upload/
+app.url=/file/**
+
+######################################
+
 # 배포 후 변경 가능
 board.notice=Notice
 board.qna=QnA
