--- a/GDJ92_Maven/src/main/resources/application.properties
+++ b/GDJ92_Maven/src/main/resources/application.properties
@@ -1,59 +1,1 @@
-spring.application.name=GDJ92_Maven
-
-######################################
-
-server.port=80
-
-######################################
-
-spring.mvc.view.prefix=/WEB-INF/views/
-spring.mvc.view.suffix=.jsp
-
-###################################### MyBatis
-
-# 유저네임
-spring.datasource.hikari.username=user01
-spring.datasource.hikari.password=user01
-# spring.datasource.url=jdbc:mysql://localhost:3306/user01
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-
-# mapper의 위치
-# mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
-# config의 위치
-# mybatis.config-location=classpath:database/config/MybatisConfig.xml
-
-# 중복된 클래스명이 있는 경우 x
-mybatis.type-aliases-package=com.winter.app
-
-# Snake case를 Camel case로 변환
-mybatis.configuration.map-underscore-to-camel-case=true
-
-######################################
-
-## FileUpload
-
-# MultiPart 객체의 사용 여부
-spring.servlet.multipart.enabled=true
-
-# 파일 하나당 최대 크기 설정
-spring.servlet.multipart.max-file-size=5MB
-
-# 총 파일의 최대 크기 설정
-spring.servlet.multipart.max-request-size=25MB
-
-### FilePath
-# 업로드할 폴더의 공통 경로
-app.upload=D:/upload/
-app.url=/file/**
-
-######################################
-
-# 배포 후 변경 가능
-board.notice=Notice
-board.qna=QnA
-
-
-
+spring.profiles.active=prod
