--- a/GDJ92_Maven/src/main/resources/application-dev.properties
+++ b/GDJ92_Maven/src/main/resources/application-dev.properties
@@ -14,11 +14,11 @@ spring.mvc.view.suffix=.jsp
 # 유저네임
 spring.datasource.hikari.username=user01
 spring.datasource.hikari.password=user01
-# spring.datasource.url=jdbc:mysql://localhost:3306/user01
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/user01
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # mapper의 위치
 # mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
@@ -52,8 +52,9 @@ app.url=/file/**
 ######################################
 
 # 배포 후 변경 가능
-board.notice=Notice
-board.qna=QnA
+board.notice=notice
+board.qna=qna
+board.profile=profile
 
 
 
