--- a/GDJ92_Maven/src/main/resources/application-dev.properties
+++ b/GDJ92_Maven/src/main/resources/application-dev.properties
@@ -14,11 +14,11 @@ spring.mvc.view.suffix=.jsp
 # 유저네임
 spring.datasource.hikari.username=user01
 spring.datasource.hikari.password=user01
-spring.datasource.url=jdbc:mysql://localhost:3306/user01
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/user01
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-#spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
-#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
+spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # mapper의 위치
 # mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
@@ -55,6 +55,23 @@ app.url=/file/**
 board.notice=notice
 board.qna=qna
 board.profile=profile
+
+######################################
+# 상속을 받지 않는 서비스에도 사용 가능하게 하는 옵션
+
+spring.aop.proxy-target-class=true
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
