--- a/GDJ92_Maven/src/main/resources/application-dev.properties
+++ b/GDJ92_Maven/src/main/resources/application-dev.properties
@@ -1,4 +1,7 @@
 spring.application.name=GDJ92_Maven
+#spring.http.encoding.charset=UTF-8
+#spring.http.encoding.enabled=true
+#spring.http.encoding.force=true
 
 ######################################
 
@@ -14,11 +17,11 @@ spring.mvc.view.suffix=.jsp
 # 유저네임
 spring.datasource.hikari.username=user01
 spring.datasource.hikari.password=user01
-#spring.datasource.url=jdbc:mysql://localhost:3306/user01
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/user01
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
-spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#spring.datasource.url=jdbc:log4jdbc:mysql://localhost:3306/user01
+#spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # mapper의 위치
 # mybatis.mapper-locations=classpath:database/mappers/*Mapper.xml
