--- a/GDJ92_Maven/src/main/resources/application-dev.properties
+++ b/GDJ92_Maven/src/main/resources/application-dev.properties
@@ -57,7 +57,7 @@ app.url=/file/**
 # 배포 후 변경 가능
 board.notice=notice
 board.qna=qna
-board.profile=profile
+board.member=member
 
 ######################################
 # 상속을 받지 않는 서비스에도 사용 가능하게 하는 옵션
