--- a/GDJ92_Maven/src/main/resources/application-dev.properties
+++ b/GDJ92_Maven/src/main/resources/application-dev.properties
@@ -64,7 +64,19 @@ board.member=member
 
 spring.aop.proxy-target-class=true
 
+######################################
+# 1. message properties의 위치 설정
+spring.messages.basename=messages/message
 
+# 2. Encoding 설정
+spring.messages.encoding=UTF-8
+
+# 3. key가 없는 경우 설정
+spring.messages.use-code-as-default-message=true
+# true: 키가 없을 경우 예외를 발생시키지 않고 키를 출력
+# false: 예외 발생
+
+######################################
 
 
 
