--- a/GDJ92_Maven/src/main/resources/application-dev.properties
+++ b/GDJ92_Maven/src/main/resources/application-dev.properties
@@ -76,6 +76,9 @@ spring.messages.use-code-as-default-message=true
 # true: 키가 없을 경우 예외를 발생시키지 않고 키를 출력
 # false: 예외 발생
 
+# 변경 인식 시간
+spring.messages.cache-duration=600
+
 ######################################
 
 
