검증 그룹, 회원 정보 수정

--- a/GDJ92_Maven/src/main/resources/messages/message.properties
+++ b/GDJ92_Maven/src/main/resources/messages/message.properties
@@ -5,3 +5,14 @@ user.info=당신의 ID는 {0} 이고, 당신의 이메일은 {1} 입니다
 
 member.password.check=비밀번호가 일치하지 않습니다
 member.username.check=아이디가 중복입니다
+
+#검증 Annotation=값
+NotBlank=필수입니다
+
+#검증 Annotation.멤버변수명=값
+NotBlank.username=ID는 필수입니다
+NotBlank.boardTitle=제목은 필수입니다
+
+#검증 Annotation.vo이름(bean의 이름).멤버변수명=값
+
+Size.memberVO.password={0}는 {2}글자 이상 {1}글자 이하
