--- a/GDJ92_Maven/src/main/resources/messages/message.properties
+++ b/GDJ92_Maven/src/main/resources/messages/message.properties
@@ -1,7 +1,7 @@
 # 이 파일은 언어 설정이 안 되어 있을 경우 Default로 사용
 
 welcome.message=안녕하세요
-user.info=당신의 ID는 {0} 이고, 당신의 이메일은 {1} 입니다
+user.info=당신의 ID는 {0} 이고, <br>당신의 이메일은 {1} 입니다
 
 member.password.check=비밀번호가 일치하지 않습니다
 member.username.check=아이디가 중복입니다
