--- a/GDJ92_Maven/pom.xml
+++ b/GDJ92_Maven/pom.xml
@@ -31,6 +31,11 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+		<!-- web client -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
 		<!-- 유효성 검사 -->
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
 		<dependency>
