--- a/GDJ92_Maven/.gitignore
+++ b/GDJ92_Maven/.gitignore
@@ -7,6 +7,7 @@ target/
 ### MyCustom ###
 application-prod.properties
 **/application-dev.properties
+src/main/resources/application-dev.properties
 
 ### STS ###
 .apt_generated
