--- a/GDJ92_Gradle/src/main/resources/application.properties
+++ b/GDJ92_Gradle/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## create-drop: 서버가 종료될 때 삭제
 ## update	: 변경된것이 있으면 자동 수정
 ## validate	: 스키마 유효성 검증, DB의 스키마는 변경되지 않음
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 
 # SQL LOG
@@ -29,7 +29,7 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 ## Physical
 # CamelCase 대문자는 밑줄로 교체, 모든 테이블은 소문자로 구성
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 
 
