--- a/GDJ92_Gradle/src/main/resources/application.properties
+++ b/GDJ92_Gradle/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/user02
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
-# JPA
+########################################## JPA
 
 ## DDL
 ## none		: 기본값
@@ -16,8 +16,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 ## create-drop: 서버가 종료될 때 삭제
 ## update	: 변경된것이 있으면 자동 수정
 ## validate	: 스키마 유효성 검증, DB의 스키마는 변경되지 않음
-spring.jpa.hibernate.ddl-auto=update
-
+spring.jpa.hibernate.ddl-auto=create
 
 # SQL LOG
 logging.level.org.hibernate.SQL=debug
