Token Login, Logout

--- a/GDJ92_Gradle/src/main/resources/application.properties
+++ b/GDJ92_Gradle/src/main/resources/application.properties
@@ -32,4 +32,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ca
 
 
 
+################################### token
 
+jwt.secret=secretsecretsecretsecret
+jwt.valid.time.access=180000
+jwt.valid.time.refresh=600000
+jwt.issuer=SJ
